widget added, workManager, intetService added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Explorer</string>
 
-<!--    common for all-->
+    <!--    common for all-->
     <string name="group_of_focusable_content_inner_object">false</string>
     <string name="group_of_focusable_content_object">true</string>
 
@@ -25,12 +25,18 @@
     <string name="main_error_msg">An error occurred. Please try later</string>
     <string name="main_error_msg_no_network">No network connection found. Please enable wifi or data connection and try again</string>
     <string name="main_error_msg_no_data_found">No result found. Please try with a different word or years</string>
-    
+
+
+    <string name="base_api_url">https://images-api.nasa.gov/</string>
+    <string name="param_key_query">q</string>
+    <string name="param_key_year_start">year_start</string>
+    <string name="param_key_year_end">year_end</string>
+    <string name="param_key_media_type">media_type</string>
+    <string name="param_value_media_type">image</string>
 
 
     <!--    FragmentList-->
     <string name="item_image_content_desc">This image is titled as %1$s</string>
-
 
 
     <!--    FragmentDetail-->
@@ -41,6 +47,24 @@
     <string name="image_content">Image of the searched item</string>
     <string name="next_arrow_content">Next item</string>
     <string name="back_arrow_content">Previous item</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
+
+<!--    Widget-->
+    <string name="widget_image_content_desc">this is an image for explorer widget application</string>
+    <string name="image_sunday">https://images-assets.nasa.gov/image/KSC-02pp0471/KSC-02pp0471~small.jpg</string>
+    <string name="image_monday">https://images-assets.nasa.gov/image/PIA00114/PIA00114~small.jpg</string>
+    <string name="image_tuesday">https://images-assets.nasa.gov/image/PIA07901/PIA07901~thumb.jpg</string>
+    <string name="image_wednesday">https://images-assets.nasa.gov/image/PIA04224/PIA04224~thumb.jpg</string>
+    <string name="image_thursday">https://images-assets.nasa.gov/image/GSFC_20171208_Archive_e000492/GSFC_20171208_Archive_e000492~thumb.jpg</string>
+    <string name="image_friday">https://images-assets.nasa.gov/image/PIA15427/PIA15427~thumb.jpg</string>
+    <string name="image_saturday">https://images-assets.nasa.gov/image/PIA01966/PIA01966~thumb.jpg</string>
+    <string name="image_default">https://images-assets.nasa.gov/image/AFRC2017-0233-007/AFRC2017-0233-007~thumb.jpg</string>
+    <string name="name_saved_widget_image_file">explorer_widget.png</string>
+
+<!--    Worker-->
+    <string name="shared_pref_id">com.example.explorer.sharedPref</string>
+    <string name="shared_pref_file_name_key">shared_pref_file_name_key</string>
 
 
 </resources>
