project submitted in this stage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,7 @@
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
     <string name="saved_instance_bundle_key">item_position</string>
+    <string name="secondary_creator_na">N/A</string>
 
 <!--    Widget-->
     <string name="widget_image_content_desc">this is an image for explorer widget application</string>
