--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,7 +84,7 @@
         <item>https://images-assets.nasa.gov/image/AFRC2017-0233-007/AFRC2017-0233-007~thumb.jpg</item>
     </string-array>
 
-    <string name="widget_intent_asset_id_key">key_asset_id</string>
+    <string name="widget_intent_asset_id_key">com.example.explorer.key_asset_id</string>
 
 
     <!--    Worker-->
